# llm-session-manager

./: .gitignore  7_DAY_LAUNCH_PLAN.md  AUTOMATED_TESTING_GUIDE.md  CHANGELOG.md  CLI_GUIDE.md  COLLABORATION_IMPLEMENTATION_STATUS.md  COMPLETE_E2E_TEST_REPORT.md  CONTRIBUTING.md  DASHBOARD_FEATURES.md  DOCS_FOR_NOTION.md  FEATURES_COMPLETED.md  FEATURE_STATUS.md  GO_TO_MARKET_COMPLETE.md  HOW_TO_TEST.md  INSTANT_START.md  LICENSE  MARKET_ANALYSIS.md  MINOR_FIXES_COMPLETE.md  NEXT_ACTIONS.md  ONE_PAGER.md  PILOT_OUTREACH.md  PRODUCT_BRIEF.md  PROJECT_OVERVIEW.md  PROJECT_SPEC.md  QUICKSTART.md  QUICKSTART_DEMO.md  QUICK_TEST.md  README.md  SESSION_SUMMARY.md  START.md  TAGGING_FIX_COMPLETE.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TEST_REPORT.md  UPGRADE_ROADMAP.md  VIRAL_STRATEGY.md  WHATS_NEW_v0.2.0.md  docker-compose.yml  install.html  (+12 more)
.devcontainer/: devcontainer.json  setup.sh
backend/: .env.example  init_database.py  install_dependencies.sh  requirements.txt
docs/: ARCHITECTURE_EXPLAINED.md  CLAUDE_CODE_SKILLS_GUIDE.md  COGNEE_INTEGRATION.md  COGNEE_QUICK_START.md  HYBRID_DETECTION.md  INTEGRATION_COMPLETE.md  MCP_INTEGRATION.md  MCP_QUICKSTART.md  QUICK_TEST.md  README.md  REALTIME_COLLABORATION.md  TEAM_DASHBOARD_ARCHITECTURE.md  TEST_END_TO_END.md  TEST_INTEGRATION.md  VSCODE_EXTENSION_GUIDE.md
frontend/: README.md  index.html  package-lock.json  package.json
llm_session_manager/: __init__.py  cli.py  config.py
manual_tests/: README.md  test_dashboard.py  test_dashboard_interactive.py  test_discovery.py  test_health_monitor.py  (+3 more)
(+79 files in other folders)
